; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/disk/extr_ramdisk.c_RamDiskRead.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/disk/extr_ramdisk.c_RamDiskRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RamDiskOffset = common dso_local global i64 0, align 8
@RamDiskImageLength = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4
@RamDiskBase = common dso_local global i64 0, align 8
@RamDiskImageOffset = common dso_local global i64 0, align 8
@ESUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32*, i64, i64*)* @RamDiskRead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RamDiskRead(i64 %0, i32* %1, i64 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  %11 = load i64, i64* @RamDiskOffset, align 8
  %12 = load i64, i64* @RamDiskImageLength, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %20, label %14

14:                                               ; preds = %4
  %15 = load i64, i64* @RamDiskOffset, align 8
  %16 = load i64, i64* %8, align 8
  %17 = add nsw i64 %15, %16
  %18 = load i64, i64* @RamDiskImageLength, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %14, %4
  %21 = load i64*, i64** %9, align 8
  store i64 0, i64* %21, align 8
  %22 = load i32, i32* @EIO, align 4
  store i32 %22, i32* %5, align 4
  br label %39

23:                                               ; preds = %14
  %24 = load i64, i64* @RamDiskBase, align 8
  %25 = load i64, i64* @RamDiskImageOffset, align 8
  %26 = add nsw i64 %24, %25
  %27 = load i64, i64* @RamDiskOffset, align 8
  %28 = add nsw i64 %26, %27
  store i64 %28, i64* %10, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i64, i64* %10, align 8
  %31 = load i64, i64* %8, align 8
  %32 = call i32 @RtlCopyMemory(i32* %29, i64 %30, i64 %31)
  %33 = load i64, i64* %8, align 8
  %34 = load i64, i64* @RamDiskOffset, align 8
  %35 = add nsw i64 %34, %33
  store i64 %35, i64* @RamDiskOffset, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load i64*, i64** %9, align 8
  store i64 %36, i64* %37, align 8
  %38 = load i32, i32* @ESUCCESS, align 4
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %23, %20
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @RtlCopyMemory(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
